Fixed the horizontal scrollbar visible.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,4 +12,5 @@ $fa-font-path: "~font-awesome/fonts";
 body {
   font-family: Poppins;
   background-color: #1B1B1B;
+  overflow-x: hidden;
 }
